# sym_graver

./: .gitignore  CMakeLists.txt  README.md
src/: dd_operations.cpp  dd_operations.h  dd_to_dot.cpp  main.cpp  math_utils.h  matrix.cpp  matrix.h  reverse_heap.h  sym_pottier.cpp  sym_pottier.h  unit_tests.cpp  variable_order.cpp  variable_order.h
test/: benchmark.ipynb  benchmark60sec.ipynb  models_4ti2.txt  models_mcc2.txt  models_mcc200.txt  models_mcc200quick.txt  models_random.txt  models_random2.txt  models_random_6_15.txt  random_matrix_generators2.ipynb
test/extra/: HilbertGenerators.PNPRO  random_matrices.ipynb
test/mats_4ti2/: hppi10.gra  hppi11.gra  magic3x3.gra
test/mats_basic/: 2x2.gra  2x2.mat  33v2.mat  33v3.mat  39.gra  39.hil  39.lat  55ct.hil  55ct.mat  expT2n10.hil  expT2n10.mat  expT2n10.net  expT2n20.mat  expT2n20.net  expT2n30.mat  expT2n30.net  hnf1.hil  hnf1.mat  hnf2.mat  k44bad.hil  k44bad.mat  ker33.lat  ker33.piv  ker44.lat  ker44.piv  ker55.lat  ker55.piv  kerInput.mat  lea02.gra  lea02.hil  lea02.lat  lea3x4.gra  lea3x4.lat  magic3x3.fplll  magic3x3.hilb  ref3.hil  ref3.mat  seqP20.hil  seqP20.mat  seqP20.net  (+9 more)
test/mats_mcc2/: AirplaneLD-COL-0010.gra  AirplaneLD-COL-0020.gra  AirplaneLD-COL-0020.mat  AirplaneLD-COL-0050.gra  AirplaneLD-COL-0050.mat  AirplaneLD-PT-0010.gra  AirplaneLD-PT-0020.gra  AirplaneLD-PT-0020.mat  AirplaneLD-PT-0050.gra  AirplaneLD-PT-0050.mat  Angiogenesis-PT-01.gra  Angiogenesis-PT-01.mat  Angiogenesis-PT-10.gra  Angiogenesis-PT-10.mat  AutoFlight-PT-01a.mat  AutoFlight-PT-01b.mat  AutoFlight-PT-02a.mat  AutoFlight-PT-02b.gra  AutoFlight-PT-02b.mat  AutoFlight-PT-03a.mat  AutoFlight-PT-03b.mat  AutoFlight-PT-04a.mat  AutoFlight-PT-04b.mat  AutoFlight-PT-05a.mat  AutoFlight-PT-05b.mat  AutoFlight-PT-06a.mat  AutoFlight-PT-12a.mat  BART-PT-002.gra  BridgeAndVehicles-COL-V04P05N02.gra  BridgeAndVehicles-COL-V04P05N02.mat  BridgeAndVehicles-COL-V10P10N10.gra  BridgeAndVehicles-PT-V10P10N10.mat  BusinessProcesses-PT-01.mat  BusinessProcesses-PT-03.mat  (+470 more)
(+940 files in other folders)
